# semantic-dynamics

./: .env.example  .gitattributes  .gitignore  CLUSTER_SETUP.md  README.md  SETUP_COMPLETE.md  pyproject.toml  test_setup.py
src/feature_dynamics/: __init__.py  collect_trials.py  config.py  data_collection.py  evaluate_sae_ceiling.py  evaluation.py  generate.py  main.py  plot_dynamics.py  plot_dynamics_comparison.py  predictors.py  prompts.py  save_sae_weights.py  scale_features.py  train_rnn.py
src/feature_dynamics/analysis/: __init__.py  evaluate_sae_ceiling.py  plot_dynamics.py  plot_dynamics_comparison.py  scale_features.py
src/feature_dynamics/generation/: __init__.py  collect_trials.py  generate.py
src/feature_dynamics/lfads/: __init__.py  __main__.py  analyze_features.py  model.py  save_norm_stats.py  train.py  training.py
src/feature_dynamics/notebooks/: explore_trials.ipynb  inspect_gemma_model.ipynb  interactive_dynamics.ipynb  visualize_lfads.ipynb
src/feature_dynamics/rnn/: __init__.py  train_rnn.py
src/feature_dynamics/utils/: save_sae_weights.py
